--- a/banho.html
+++ b/banho.html
@@ -98,7 +98,7 @@ para o seu pet sair cheiroso e feliz.</p>
   </div>
 
    <div class="botao">
-      <form action="/index.html" >
+      <form action="#agendar" >
         <button class="btn"> Saber Mais </button>
       </form>
     </div>
